--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/SCSS/style.css">
+	<link rel="stylesheet" href="/CSS/style-min.css">
 	<title>Parallax</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
 		</section>
 	</div>
 
-	<script src="/JS/script.js"></script>
+	<script src="/JS/script-min.js"></script>
 </body>
 
 </html>
